# ArchX-Library

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  final_check.txt  final_check_v2.txt  output.txt  panic.txt
MyRobloxManager/: .gitignore  RoWinget  START-ROWINGET.bat
MyRobloxManager/example-project/: README.md  project.json
MyRobloxManager/memory-manager/: README.md  package-lock.json  package.json
MyRobloxManager/roblox-plugin/: README.md  SimpleManager.lua  SingleFilePlugin.lua  fileHandler.lua  httpServer.lua  main.lua  plugin.manifest.json  pollingService.lua  uiManager.lua
MyRobloxManager/vscode-extension/: package-lock.json  package.json
benchmark/: full_benchmark.rs
docs/: ENGINE.md  HARDWARE.md  INTEGRATION.md  PROFILING.md
examples/: async_cli_example.rs  async_cli_full_example.rs  basic_bench.rs  benchmark_suite.rs  production_ready_demo.rs  professional_fluent_api.rs  smart_rust_cli.rs  smart_tauri_app.rs  smart_wasm.rs  tauri_async_example.rs  tauri_example.rs  tauri_full_example.rs  v2_1_hybrid_demo.rs  v2_3_adaptive_demo.rs  v2_4_sovereign_perf.rs  v2_sovereign_demo.rs  v2_wasm_bench.rs  v3_fluent_api_demo.rs  v3_sovereign_gpu_demo.rs  wasm_full_example.rs
src/: adaptive.rs  async_ops.rs  diagnostics.rs  engine.rs  error.rs  hardware.rs  lib.rs  plugin.rs  profiling.rs  system.rs
src/benchmark/: timer.rs
src/core/: error.rs  mod.rs  profiler.rs
src/cpu/: arch.rs  bits.rs  features.rs  mod.rs
src/decision/: adaptive_engine.rs  heuristics.rs  mod.rs  policy.rs
src/detect/: cpu.rs  gpu_info.rs  memory.rs  mod.rs  system.rs
src/device/: device_info.rs  manager.rs  mod.rs
src/dispatch/: hybrid.rs  mod.rs  select.rs
src/execution/: mod.rs
src/gpu/: manager.rs  mod.rs  opencl.rs  opengl.rs  vulkan.rs
src/integration/: tauri.rs
tests/: adaptive_engine.rs  benchmark.rs  consistency.rs  cpu_detection.rs  dispatch.rs  extreme_stress.rs  full_verification.rs  parallel_consistency.rs  production_suite.rs  stress.rs  stress_tests.rs
(+46 files in other folders)
