[package]
name = "archx"
version = "1.1.1"
authors = ["AkramStation"]
edition = "2021"
license = "MIT"
description = "High-performance CPU/GPU adaptive optimization library for Rust"
repository = "https://github.com/AkramStation/ArchX-Library"
documentation = "https://docs.rs/archx"


[lib]
name = "archx"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
