[package]
name = "archx"
version = "2.0.0"
authors = ["AkramStation"]
edition = "2021"
license = "MIT"
description = "High-performance CPU/GPU adaptive optimization library with SIMD and Multithreading"
repository = "https://github.com/Codevora-Studio/ArchX"
documentation = "https://docs.rs/archx"
keywords = ["simd", "optimization", "gpu", "multithreading", "adaptive"]
categories = ["concurrency", "development-tools::profiling", "hardware-support"]
readme = "README.md"


[lib]
name = "archx"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
